--- a/src/app/Feature/Tickets/tickets-management.component.html
+++ b/src/app/Feature/Tickets/tickets-management.component.html
@@ -24,7 +24,11 @@
     <app-ticket-list-sidebar
       [tickets]="filteredTickets()"
       [selectedId]="selectedTicketId()"
+      [currentPage]="currentPage()"
+      [hasNextPage]="hasNextPage()"
+      [hasPreviousPage]="hasPreviousPage()"
       (select)="selectTicket($event)"
+      (pageChange)="onPageChange($event)"
     />
   </aside>
 
